--- a/paper/references.bib
+++ b/paper/references.bib
@@ -4,3 +4,156 @@
   year    = {2024},
   url     = {https://www.R-project.org/}
 }
+
+@data{DVN/HMOEJO_2020,
+author = {Acharjee, Mithun and Das, Kumer Pial and Young S.Stanley},
+publisher = {Harvard Dataverse},
+title = {{Air Quality-Lung Cancer Data}},
+UNF = {UNF:6:i46q//o+MXdV4nUxI+afVA==},
+year = {2020},
+version = {V1},
+doi = {10.7910/DVN/HMOEJO},
+url = {https://doi.org/10.7910/DVN/HMOEJO}
+}
+
+
+@article{jagai_county-level_2017,
+	title = {County-level cumulative environmental quality associated with cancer incidence},
+	volume = {123},
+	issn = {0008-543X},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6121813/},
+	doi = {10.1002/cncr.30709},
+	abstract = {Background
+Individual environmental exposures are associated with cancer development; however, environmental exposures occur simultaneously. The Environmental Quality Index (EQI) is a county-level measure of cumulative environmental exposures, occurring in five domains.
+
+Methods
+The EQI was linked to county-level annual age-adjusted cancer incidence rates from the Surveillance, Epidemiology, and End Results (SEER) Program State Cancer Profiles. All-site cancer and the top three site-specific cancers for males and females were considered. Incident rate differences (IRD, annual rate difference per 100,000 persons) and 95\% confidence intervals (CI) were estimated using fixed-slope, random intercept multi-level linear regression models. Associations were assessed with domain-specific indices and analyses were stratified by rural-urban status.
+
+Results
+Comparing highest quintile/poorest environmental quality to lowest quintile/best environmental quality for overall EQI, all-site county-level cancer incidence rate was positively associated with poor environmental quality overall (IRD: 38.55, 95\%CI 29.57,47.53) and for males (IRD: 32.60, 95\%CI 16.28,48.91) and females (IRD: 30.34, 95\%CI 20.47,40.21), indicating a potential increase in cancer incidence with decreasing environmental quality. Rural-urban stratified models demonstrated positive associations comparing highest to lowest quintiles for all strata, except the thinly populated/rural stratum and in the metropolitan-urbanized stratum. Prostate and breast cancer demonstrated the strongest positive associations with poor environmental quality.
+
+Conclusion
+We observed strong positive associations between the EQI and all-site cancer incidence rates and associations differed by rural-urban status and environmental domain. Research focusing on single environmental exposures in cancer development may not address the broader environmental context in which cancers develop and future research needs to consider cumulative environmental exposures.},
+	number = {15},
+	urldate = {2025-12-04},
+	journal = {Cancer},
+	author = {Jagai, JS and Messer, LC and Rappazzo, KM and Gray, CL and Grabich, SC and Lobdell, DT},
+	month = aug,
+	year = {2017},
+	pmid = {28480506},
+	pmcid = {PMC6121813},
+	pages = {2901--2908},
+}
+
+@article{hystad_neighbourhood_2013,
+	title = {Neighbourhood socioeconomic status and individual lung cancer risk: evaluating long-term exposure measures and mediating mechanisms},
+	volume = {97},
+	issn = {1873-5347},
+	shorttitle = {Neighbourhood socioeconomic status and individual lung cancer risk},
+	doi = {10.1016/j.socscimed.2013.08.005},
+	abstract = {Neighbourhood socioeconomic status (SES) has been associated with numerous chronic diseases, yet little information exists on its association with lung cancer incidence. This outcome presents two key empirical challenges: a long latency period that requires study participants' residential histories and long-term neighbourhood characteristics; and adequate data on many risk factors to test hypothesized mediating pathways between neighbourhood SES and lung cancer incidence. Analysing data on urban participants of a large Canadian population-based lung cancer case-control study, we investigate three issues pertaining to these challenges. First, we examine whether there is an association between long-term neighbourhood SES, derived from 20 years of residential histories and five national censuses, and lung cancer incidence. Second, we determine how this long-term neighbourhood SES association changes when using neighbourhood SES measures based on different latency periods or at time of study entry. Third, we estimate the extent to which long-term neighbourhood SES is mediated by a range of individual-level smoking behaviours, other health behaviours, and environmental and occupational exposures. Results of hierarchical logistic regression models indicate significantly higher odds of lung cancer cases residing in the most compared to the least deprived quintile of the long-term neighbourhood SES index (OR: 1.46; 95\% CI: 1.13-1.89) after adjustment for individual SES. This association remained significant (OR: 1.38; 1.01-1.88) after adjusting for smoking behaviour and other known and suspected lung cancer risk factors. Important differences were observed between long-term and study entry neighbourhood SES measures, with the latter attenuating effect estimates by over 50 percent. Smoking behaviour was the strongest partial mediating pathway of the long-term neighbourhood SES effect. This research is the first to examine the effects of long-term neighbourhood SES on lung cancer risk and more research is needed to further identify specific, modifiable pathways by which neighbourhood context may influence lung cancer risk.},
+	language = {eng},
+	journal = {Social Science \& Medicine (1982)},
+	author = {Hystad, Perry and Carpiano, Richard M. and Demers, Paul A. and Johnson, Kenneth C. and Brauer, Michael},
+	month = nov,
+	year = {2013},
+	pmid = {24161094},
+	keywords = {Aged, Canada, Case-Control Studies, Environmental Exposure, Female, Health Status Disparities, Humans, Lung Neoplasms, Male, Middle Aged, Residence Characteristics, Risk Assessment, Risk Factors, Smoking, Social Class, Time Factors, Urban Health, Canada, Context, Exposure assessment, Lung cancer, Mediation, Neighbourhoods, Socioeconomic status},
+	pages = {95--103},
+}
+
+@misc{noauthor_lung_nodate,
+	title = {Lung {Cancer} {Statistics} {\textbar} {How} {Common} {Is} {Lung} {Cancer}?},
+	url = {https://www.cancer.org/cancer/types/lung-cancer/about/key-statistics.html},
+	abstract = {Get the American Cancer Society's latest statistics on lung cancer. Learn how common lung cancer is and what your lifetime chance of getting it may be.},
+	language = {en},
+	urldate = {2025-12-07},
+}
+
+@misc{acharjee_air_2020,
+	title = {Air {Quality}-{Lung} {Cancer} {Data}},
+	copyright = {, Creative Commons Zero v1.0 Universal},
+	url = {https://dataverse.harvard.edu/citation?persistentId=doi:10.7910/DVN/HMOEJO},
+	doi = {10.7910/DVN/HMOEJO},
+	abstract = {Data comes from two different sources. Population-based lung cancer incidence rates for the period 2010-2014 (most updated data) were abstracted from National Cancer Institute state cancer profiles (Schwartz et al. 1996).This national county-level database of cancer data is collected by state public health surveillance systems. The domain specific county level environmental quality index (EQI) data for the period 2000-2005 were abstracted from United States Environmental Protection Agency (USEPA) profile. Complete descriptions of the datasets used in the EQI are provided in Lobdell’s paper (Lobdell 2011). Data were merged based on the Federal Information Processing Standards (FIPS) code. Out of 3144 counties in United States this study has available information for 2602 counties: Data was not available for four states namely Kansas, Michigan, Minnesota and Nevada due to state legislation and regulations which prohibit the release of county-level data to outside entities, county whose lung cancer mortality information is missing were omitted from the data set, the Union county, Florida is an outlier in terms of mortality information which was deleted from the data set, in the process of local control analysis this study experiences two (cluster 28 and 29) non-informative clusters (non-informative cluster is one for which either treatment or control group information is missing). For analysis, non-informative clusters information was deleted from the data set.
+
+Three types of variables are used in this study: (i) lung cancer mortality as an outcome variable (ii) binary treatment indicator is the PM2.5 high (greater than 10.59 mg/m3) vs. low (less than 10.59 mg/m3) (iii) three potential X confounder for clustering namely land EQI, sociodemographic EQI and built EQI. For each index, higher values correspond to poorer environmental quality (Jagai et al. 2017). As PM2.5 is one of the indicators for measuring air EQI, that is why we do not consider the air EQI to avoid confounding effects.},
+	urldate = {2025-12-07},
+	publisher = {Harvard Dataverse},
+	author = {Acharjee, Mithun and Das, Kumer Pial and S.Stanley, Young},
+	collaborator = {Acharjee, Mithun},
+	year = {2020},
+	keywords = {Earth and Environmental Sciences, Medicine, Health and Life Sciences, Mathematical Sciences, Air Quality, Local Contro Analysis},
+}
+
+@article{jagai_county-level_2017-1,
+	title = {County-level cumulative environmental quality associated with cancer incidence},
+	volume = {123},
+	issn = {0008-543X},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6121813/},
+	doi = {10.1002/cncr.30709},
+	abstract = {Background
+Individual environmental exposures are associated with cancer development; however, environmental exposures occur simultaneously. The Environmental Quality Index (EQI) is a county-level measure of cumulative environmental exposures, occurring in five domains.
+
+Methods
+The EQI was linked to county-level annual age-adjusted cancer incidence rates from the Surveillance, Epidemiology, and End Results (SEER) Program State Cancer Profiles. All-site cancer and the top three site-specific cancers for males and females were considered. Incident rate differences (IRD, annual rate difference per 100,000 persons) and 95\% confidence intervals (CI) were estimated using fixed-slope, random intercept multi-level linear regression models. Associations were assessed with domain-specific indices and analyses were stratified by rural-urban status.
+
+Results
+Comparing highest quintile/poorest environmental quality to lowest quintile/best environmental quality for overall EQI, all-site county-level cancer incidence rate was positively associated with poor environmental quality overall (IRD: 38.55, 95\%CI 29.57,47.53) and for males (IRD: 32.60, 95\%CI 16.28,48.91) and females (IRD: 30.34, 95\%CI 20.47,40.21), indicating a potential increase in cancer incidence with decreasing environmental quality. Rural-urban stratified models demonstrated positive associations comparing highest to lowest quintiles for all strata, except the thinly populated/rural stratum and in the metropolitan-urbanized stratum. Prostate and breast cancer demonstrated the strongest positive associations with poor environmental quality.
+
+Conclusion
+We observed strong positive associations between the EQI and all-site cancer incidence rates and associations differed by rural-urban status and environmental domain. Research focusing on single environmental exposures in cancer development may not address the broader environmental context in which cancers develop and future research needs to consider cumulative environmental exposures.},
+	number = {15},
+	urldate = {2025-12-07},
+	journal = {Cancer},
+	author = {Jagai, JS and Messer, LC and Rappazzo, KM and Gray, CL and Grabich, SC and Lobdell, DT},
+	month = aug,
+	year = {2017},
+	pmid = {28480506},
+	pmcid = {PMC6121813},
+	pages = {2901--2908},
+}
+
+@article{lobdell_data_2011,
+	title = {Data {Sources} for an {Environmental} {Quality} {Index}: {Availability}, {Quality}, and {Utility}},
+	volume = {101},
+	issn = {0090-0036},
+	shorttitle = {Data {Sources} for an {Environmental} {Quality} {Index}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3222503/},
+	doi = {10.2105/AJPH.2011.300184},
+	abstract = {Objectives. An environmental quality index (EQI) for all counties in the United States is under development to explore the relationship between environmental insults and human health. The EQI is potentially useful for investigators researching health disparities to account for other concurrent environmental conditions. This article focused on the identification and assessment of data sources used in developing the EQI. Data source strengths, limitations, and utility were addressed., Methods. Five domains were identified that contribute to environmental quality: air, water, land, built, and sociodemographic environments. An inventory of possible data sources was created. Data sources were evaluated for appropriate spatial and temporal coverage and data quality., Results. The overall data inventory identified multiple data sources for each domain. From the inventory (187 sources, 617 records), the air, water, land, built environment, and sociodemographic domains retained 2, 9, 7, 4, and 2 data sources for inclusion in the EQI, respectively. However, differences in data quality, geographic coverage, and data availability existed between the domains., Conclusions. The data sources identified for use in the EQI may be useful to researchers, advocates, and communities to explore specific environmental quality questions.},
+	number = {Suppl 1},
+	urldate = {2025-12-07},
+	journal = {American Journal of Public Health},
+	author = {Lobdell, Danelle T. and Jagai, Jyotsna S. and Rappazzo, Kristen and Messer, Lynne C.},
+	month = dec,
+	year = {2011},
+	pmid = {21836111},
+	pmcid = {PMC3222503},
+	pages = {S277--S285},
+}
+
+@misc{us_epa_environmental_2017,
+	type = {Overviews and {Factsheets}},
+	title = {Environmental {Quality} {Index} ({EQI})},
+	url = {https://www.epa.gov/healthresearch/environmental-quality-index-eqi},
+	abstract = {The Environmental Quality Index (EQI) pulls data from five domains: air, water, land, built, and sociodemographic environments to provide a county-by-county snapshot of overall environmental quality across the entire U.S.},
+	language = {en},
+	urldate = {2025-12-07},
+	author = {US EPA, ORD},
+	month = may,
+	year = {2017},
+}
+
+@misc{noauthor_theory_2025,
+	title = {Theory of fundamental causes},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Theory_of_fundamental_causes&oldid=1286993629},
+	abstract = {In 1995, Jo C. Phelan and Bruce G. Link developed the theory of fundamental causes.  This theory seeks to outline why the association between socioeconomic status (SES) and health disparities has persisted over time, particularly when diseases and conditions previously thought to cause morbidity and mortality among low SES individuals have resolved.  The theory states that an ongoing association exists between SES and health status because SES "embodies an array of resources, such as money, knowledge, prestige, power, and beneficial social connections that protect health no matter what mechanisms are relevant at any given time."  In other words, despite advances in screening techniques, vaccinations, or any other piece of health technology or knowledge, the underlying fact is that those from low SES communities lack resources to protect and/or improve their health. Link and Phelan have developed and presented the theory based on the relationship between SES and health outcomes, but have noted that many combinations between an independent variable and sets of dependent variables are possible as long as the required components are fulfilled.},
+	language = {en},
+	urldate = {2025-12-07},
+	journal = {Wikipedia},
+	month = apr,
+	year = {2025},
+	note = {Page Version ID: 1286993629},
+}
