--- a/paper/references.bib
+++ b/paper/references.bib
@@ -67,6 +67,7 @@ We observed strong positive associations between the EQI and all-site cancer inc
 	url = {https://www.cancer.org/cancer/types/lung-cancer/about/key-statistics.html},
 	abstract = {Get the American Cancer Society's latest statistics on lung cancer. Learn how common lung cancer is and what your lifetime chance of getting it may be.},
 	language = {en},
+	year = {2025},
 	urldate = {2025-12-07},
 }
 
