--- a/paper/report.qmd
+++ b/paper/report.qmd
@@ -5,7 +5,7 @@ author: "Siling Guo"
 thanks: "Project repository available at: [https://github.com/silingguo/MATH261A-project2](https://github.com/silingguo/MATH261A-project2)."
 date: 2025-12-10
 date-format: long
-abstract: "This study focuses on exploring the interaction between sociodemographic conditions and air pollution in relation to the lung cancer incidence rates.We apply a multiple regression model with log transformation and conduct a hypothesis t-test. The results show that the sociodemographic conditions have a significant negative impact on the air pollution effect on lung cancer(p<0.001), and weaken the effect by approximate 1.3%. The model only includes sociodemographic conditions and air pollution as the predictor variables,and focuses on inference rather than prediction, so the results should be read with caution."
+abstract: "This study focuses on exploring the interaction between sociodemographic conditions and air pollution in relation to the lung cancer incidence rates. We apply a multiple regression model with log transformation and conduct a hypothesis T-test. The results show that the sociodemographic conditions have a significant negative impact on the air pollution effect on lung cancer(p<0.001), and weaken the effect by approximate 1.3%. The model only includes sociodemographic conditions and air pollution as the predictor variables, and focuses on inference rather than prediction, so the results should be read with caution."
 format: pdf
 bibliography: references.bib
 number-sections: true
@@ -46,7 +46,7 @@ PM2.5 is a numeric measure of fine particulate matter (µg/m³). According to [@
 
 The dataset was already clean, so we did not do additional data cleaning and transformation.
 
-The summary statistics table shows big differences across counties, meaning that LC, PM2.5 levels, and social conditions vary a lot.
+The summary statistics table below shows big differences across counties, meaning that LC, PM2.5 levels, and social conditions vary a lot.
 
 ```{r}
 #| include: false
@@ -101,17 +101,15 @@ LC = \beta_0
 + \beta_2\, \text{Social EQI}
 + \beta_3\, (\text{PM2.5} \times \text{Social EQI})
 + \varepsilon_i
-$$ 
-Here, $LC$ is the response variable. $PM2.5$ is the first predictor variable, and $Social EQI$ is the second variable. PM2.5·Social EQI,the interaction term, is the third predictor. The intercept, $\beta_0$, represents LC when both Social EQI are equal to zero. However, in pratice, this value may not be meaningful because PM2.5 is rarely zero. The slope, $\beta_1$, represents the main effect of PM2.5, indicating the average change in LC for each one-unit increase in PM2.5 when Social EQI is zero (national average level). The slope, $\beta_2$, represents the main effect of Social EQI, indicating that the average change in LC for a one-unit increase in Social EQI when PM2.5 is zero. The slope of the interaction term, $\beta_3$, represents how the Social EQI affects the relationship between PM2.5 and LC. In other words, $\beta_3$ measures how much the effect of PM2.5 on lung cancer changes at different levels of Social EQI. The error, $\varepsilon_i$, represents the error term. The ordinary least squares (OLS) method was used to estimate the parameters.
+$$ Here, $LC$ is the response variable. $PM2.5$ is the first predictor variable, and $Social EQI$ is the second variable. PM2.5·Social EQI,the interaction term, is the third predictor. The intercept, $\beta_0$, represents LC when both Social EQI are equal to zero. However, in pratice, this value may not be meaningful because PM2.5 is rarely zero. The slope, $\beta_1$, represents the main effect of PM2.5, indicating the average change in LC for each one-unit increase in PM2.5 when Social EQI is zero (national average level). The slope, $\beta_2$, represents the main effect of Social EQI, indicating that the average change in LC for a one-unit increase in Social EQI when PM2.5 is zero. The slope of the interaction term, $\beta_3$, represents how the Social EQI affects the relationship between PM2.5 and LC. In other words, $\beta_3$ measures how much the effect of PM2.5 on lung cancer changes at different levels of Social EQI. The error, $\varepsilon_i$, represents the error term. The ordinary least squares (OLS) method was used to estimate the parameters.
 
 To make sure the model is valid, we check several assumptions using plots. We use a scatter plot to check whether the predictor and the response look linear, a QQ plot to check the normality of the error term, a residual-fitted value plot to check the homoscedasticity of the error term. We assume the observations (each county) are independent because the data represent different counties and there is no clear dependence between them. The diagnostic plots showed slightly unequal variance, but the other model assumptions are reasonably satisfied.
 
-Previous studies suggest that PM2.5 and social conditions are related to LC([@hystad_neighbourhood_2013 @jagai_county-level_2017]). To determine whether Social EQI changes the strength of the PM2.5 and LC relationship, we apply the t-test on interaction term. The null hypothesis, $H_0$: $\beta_3$ = 0, represents social EQI has no impact on on the PM2.5 effect. The alternative hypothesis, $H_a$: $\beta_3$ $\neq$ 0, represents that social conditions have an impact on the PM2.5 effect. We use a significance level of $\alpha$=0.05.
+Previous studies suggest that PM2.5 and social conditions are related to LC([@hystad_neighbourhood_2013 @jagai_county-level_2017]). To determine whether Social EQI changes the strength of the PM2.5 and LC relationship, we apply the t-test on interaction term. The null hypothesis, $H_0$: $\beta_3$ = 0, represents Social EQI has no impact on on the PM2.5 effect. The alternative hypothesis, $H_a$: $\beta_3$ $\neq$ 0, represents that Social conditions have an impact on the PM2.5 effect. We use a significance level of $\alpha$=0.05.
 
 ## Advanced Model
 
-The residuals vs. fitted value plot of the base model shows slightly unequal variance. Therefore, we apply a log transformation to the response variable to improve the validity.
-$$
+The residuals vs. fitted value plot of the base model shows slightly unequal variance. Therefore, we apply a log transformation to the response variable to improve the validity. $$
 \log(LC) = \beta_0 
 + \beta_1\, \text{PM}_{2.5}
 + \beta_2\, \text{Social EQI}
@@ -125,7 +123,7 @@ Here, $\log(LC)$ is the response variable. The slope, $\beta_1$, represents the 
 
 The process of hypothesis testing and assumption checking stays the same, but the interpretation changes.
 
-This model meets the assumptions, and the unequal variance issue of the base model is mostly corrected. In the Results section, we will explain this in detail. 
+This model meets the assumptions, and the unequal variance issue of the base model is mostly corrected. In the Results section, we will explain this in detail.
 
 Our analysis also has some clear limitations: the data are at the county level, so the results only reflect county patterns and not individual risk. Besides, only PM2.5 and Social EQI are included in the model, while other important factors of lung cancer, such as smoking and genetics, are not included, which limits the predictive ability. Moreover, the Social EQI score is a rough combined measure, so it doesn’t really capture the details of social conditions.
 
@@ -229,7 +227,7 @@ g9 <- ggplot(data = dataset,aes(x = PM2.5, y = log(LC)))+
 g10 <- ggplot(data = dataset,aes(x = Sociod_EQI, y = log(LC)))+
   geom_point()+
   geom_smooth(method = "lm", se = FALSE, color = "red") +
-  labs(title = "(LC) vs Sociod_EQI of Advance Model",
+  labs(title = "Log(LC) vs Sociod_EQI of Advance Model",
        x = "Social EQI",
        y = "log(LC)")
 
