--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,9 +1,11 @@
-@article{RCoreTeam2024,
-  title   = {R: A Language and Environment for Statistical Computing},
-  author  = {{R Core Team}},
-  year    = {2024},
-  url     = {https://www.R-project.org/}
-}
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2025},
+    url = {https://www.R-project.org/},
+  }
 
 @data{DVN/HMOEJO_2020,
 author = {Acharjee, Mithun and Das, Kumer Pial and Young S.Stanley},
